--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,46 @@
-body *{
+/* Common styles for body *, nav, and main */
+body *,
+nav,
+main {
     border: 4px solid #7f007f;
-    height: 100px;
+    background-color: lemonchiffon;
     margin: 10px;
     text-align: center;
     font-size: 2rem;
     font-family: 'Times New Roman', Times, serif;
+    height: 100vh;
 }
-nav{
-    height: 50px;
+header, footer{
+    height: 15vh;
+    margin: inherit;
 }
-main{
-    height: 65vh;
-    border: none;
-    margin: none;
+nav {
+    height: 10vh;
 }
-aside{
-    float: left;
-    width: 48.5%;
-    height: 60vh;
-    margin: 5px;
 
+main {
+    background-color: white;
+    height: 40vh;
+    border: none;
+    margin: 5px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+aside {
+    background-color: lemonchiffon;
+    width: calc(50% - 20px);
+    height: 35vh;
+    margin: 5px;
+}
+
+/* Media query for smaller devices */
+@media only screen and (max-width: 600px) {
+    main {
+        height: auto;
+    }
+    
+    aside {
+        width: calc(100% - 20px);
+    }
 }
